<resources>
    <string name="app_name">慕课音乐</string>
    <string name="CloudMusic">云音乐</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="phone_num">手机号</string>
    <string name="password">密码</string>
    <string name="logon">立即注册</string>
    <string name="invaild_phone_num">无效手机号</string>
    <string name="password_null">密码不可为空！</string>
    <string name="please_input_phone_num">请输入手机号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_confirm_password">请再次输入密码确认</string>
    <string name="cloud_music">云音乐</string>
    <string name="user_name">用户名：</string>
    <string name="change_password">修改密码</string>
    <string name="exit_login">退出登录</string>
    <string name="user_center">个人中心</string>
    <string name="please_enter_origin_pwd">请输入原密码</string>
    <string name="please_input_new_pwd">请输入新密码</string>
    <string name="please_confirm_new_pwd">请确认新密码</string>
    <string name="confirm">确认</string>
    <string name="change_pwd">修改密码</string>
    <string name="recommended_song_list">推荐歌单</string>
    <string name="music_list_name">歌单名称</string>
    <string name="hottest_music">最热音乐</string>
    <string name="music_name">音乐名称</string>
    <string name="author">作者</string>
    <string name="album_music">专辑音乐</string>
    <string name="album_list">专辑列表</string>
    <string name="music_author">作者</string>
    <string name="invalidPhoneNum">无效手机号</string>
    <string name="please_confirm_input_password">请确认密码！</string>
    <string name="register_success">注册成功！</string>
    <string name="this_phone_num_already_register">该手机号已被注册！</string>
    <string name="phone_or_password_wrong">手机号或密码不正确！</string>
    <string name="this_phone_num_not_sign_up">当前手机号未注册！</string>
    <string name="login_success">登陆成功！</string>
    <string name="user_id">用户名:</string>
    <string name="please_input_origin_pwd">请输入原密码</string>
    <string name="origin_pwd_wrong">原密码不正确</string>
    <string name="change_success">修改成功</string>
</resources>
