<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">
    <include layout="@layout/nav_bar"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginSize"
        />
    <com.bai.psychedelic.cloudmusic.view.InputView
        android:id="@+id/input_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputViewHeight"
        android:layout_marginTop="@dimen/marginSize"
        app:input_icon="@mipmap/phone"
        app:input_hint="@string/please_input_phone_num"
        app:is_password="false"
        >
    </com.bai.psychedelic.cloudmusic.view.InputView>
    <View
        style="@style/line" />
    <com.bai.psychedelic.cloudmusic.view.InputView
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputViewHeight"
        app:input_icon="@mipmap/password"
        app:input_hint="@string/please_input_password"
        app:is_password="true"
        >
    </com.bai.psychedelic.cloudmusic.view.InputView>
    <View
        style="@style/line" />
    <com.bai.psychedelic.cloudmusic.view.InputView
        android:id="@+id/input_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputViewHeight"
        app:input_icon="@mipmap/password"
        app:input_hint="@string/please_confirm_password"
        app:is_password="true"
        >
    </com.bai.psychedelic.cloudmusic.view.InputView>
    <View
        style="@style/line" />
    <Button
        style="@style/commitBtn"
        android:layout_marginTop="@dimen/marginSize"
        android:text="@string/logon"
        android:onClick="onRegisterClick"
        />
</LinearLayout>