<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MeActivity">
    <include layout="@layout/nav_bar"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/user_name"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/marginSize"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemHeight"
        android:layout_marginTop="@dimen/marginSize"
        android:text="@string/change_password"
        android:textSize="@dimen/infoSize"
        android:paddingStart="@dimen/marginSize"
        android:paddingEnd="@dimen/marginSize"
        android:gravity="center_vertical"
        android:onClick="OnChangePasswordClick"
        android:background="@drawable/item_commit_select"
        />
    <Button
        style="@style/commitBtn"
        android:text="@string/exit_login"
        android:layout_marginTop="@dimen/marginSize"
        android:onClick="onLogoutClick"
        />
</LinearLayout>